--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Findtrend helps you minimize your tabs and discover trends by gathering all your favorite websites in one place."
     />
+    <meta
+      name="keywords"
+      content="Findtrend, trends, productivity, web app, browser tabs, website management"
+    />
+    <meta name="author" content="Your Company Name" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
